--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 :root{
     --primary: #F18700;
     --secondary: #3C4142;
     --tertiary: #fff;
     --primary-shadow: rgba(211, 123, 0, 0.596);
+    --secondary-outline: #000;
+
 }
 *{
-    font-family: "Roboto", sans-serif;
+    font-family: "Chakra Petch", sans-serif;
 }
-.navigation-bar{
-    background: var(--tertiary);
-    height: 90vh;
-}
+
 .navbar .nav-custom{
-    background-color: transparent !important;
+    background-color: var(--tertiary) !important;
 }
 .custom-shadow{
     box-shadow: 0 3px 12px var(--primary-shadow); /* Change the color and opacity of the shadow */
@@ -23,19 +22,18 @@
     margin-left: 20px;
 }
 .navbar-brand span{
-    font-weight: 500;
-    font-size: 23px;
+    font-weight: 400;
     color: var(--secondary);
+    font-size: 18px !important;
 }
 .navbar-nav{
     margin-left: 70px;
-    /* outline: 1px solid black; */
 }
 .nav-item{
     margin: 0 20px 0 20px;   
 }
 .nav-link span{
-    font-weight: 700;
+    font-weight: 600;
     color: var(--primary);
 }
 .nav-link span:hover{
@@ -57,5 +55,142 @@
     .nav-item{
         margin: 0 3px 0 3px;
     }
-    
+}
+
+.hero-section{
+    background: var(--tertiary);
+    height: auto;
+}
+.elits-president{
+    margin: 10px 0 0 80px;
+}
+.hero-section-greeting{
+    width: 55%;
+    text-align: justify;
+    position: absolute;
+    margin: -480px 0 0 350px;
+}
+.hero-section-greeting p{
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--secondary-outline);
+    text-transform: uppercase;
+}
+.hero-section-greeting h1{
+    font-size: 28px;
+    font-weight: 500;
+    color: var(--secondary);
+    margin-top: -10px;
+}
+.hero-section-greeting h1 span{
+    color: var(--primary);
+}
+.hero-section-greeting input{
+    box-shadow: 0 3px 20px rgba(33, 33, 33, .18);
+    outline: 1px solid var(--secondary);
+    font-size: 16px;
+}
+.hero-section-card{
+    box-shadow: 0 3px 20px rgba(33, 33, 33, .18);
+    margin: -280px 0 0 350px;
+    width: 55%;
+    border-radius: 5%;
+    padding-bottom: 75px;
+}
+.hero-section-card .card{
+    background-color: rgb(241, 153, 29);
+    box-shadow: 0 3px 20px rgba(33, 33, 33, .18);
+}
+.card-body a{
+    outline: 1px solid var(--secondary-outline);
+    color: var(--secondary) !important;
+}
+.card-body a:after{
+    background-color: var(--secondary) !important;
+    outline: 1px solid var(--tertiary);
+    color: var(--tertiary);
+}
+.card-body span:hover{
+    color: var(--primary);
+}
+.hero-section-card .card .card-body p{
+    color: white;
+    font-size: 24px;
+}
+.hero-section-card .card .elits-logo{
+    background: var(--tertiary);
+    padding: 10px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.history-section{
+    height: auto;
+    background-color: var(--secondary);
+}
+.history-section h1{
+    color: var(--primary);
+    font-weight: 500;
+}
+.history-section p{
+    color: var(--tertiary);
+    font-size: 18px;
+    text-align: justify;
+}
+.history-section .accordion{
+    padding-bottom: 60px;
+}
+.history-section .accordion-item{
+    color: var(--primary);
+    text-align: justify;
+}
+.history-section .accordion-button{
+    transition: 0.5s;
+    font-weight: 500;
+}
+.history-section .accordion-button:hover{
+    background: var(--primary);
+    color: var(--tertiary);
+}
+
+.awards-section{
+    height: 100vh;
+    margin: 0 auto;
+    text-align: justify;
+}
+.awards-section h1{
+    color: var(--primary);
+}
+.awards-section .card{
+    border-radius: 15px;
+    box-shadow: 0 3px 20px rgba(33, 33, 33, .18);
+}
+.award-image{
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background-image: linear-gradient(to top, var(--primary),  rgb(214, 113, 12) , rgb(229, 128, 26),rgb(247, 147, 47));
+}
+.award-title{
+    font-weight: 400;
+    color: white;
+    text-align: center;
+}
+.award-button:hover{
+    outline: 1.5px solid var(--primary);
+    font-weight: 500;
+}
+.awards-section .modal .card{
+    box-shadow: 0 3px 20px rgba(33, 33, 33, 0.5);
+}
+.awards-section .modal .card p{
+    color: var(--primary);
+}
+
+.news-section{
+    height: auto;
+    background-image: linear-gradient(to top, var(--primary),  rgb(212, 116, 20) , rgb(214, 121, 27),rgb(253, 161, 68));
+}
+.news-section .container h1{
+    color: var(--tertiary);
 }
